--- a/lib/surfline_regions_web/templates/area/index.html.eex
+++ b/lib/surfline_regions_web/templates/area/index.html.eex
@@ -17,8 +17,8 @@
         <%= area.surfline_id %>
       </td>
       <td class="text-right">
-        <span><%= link "Show", to: area_path(@conn, :show, area.id) %></span>
-        <span><%= link "Regions", to: area_region_path(@conn, :index, area.id) %></span>
+        <span><%= link "Show", to: area_path(@conn, :show, area.surfline_id) %></span>
+        <span><%= link "Regions", to: area_region_path(@conn, :index, area.surfline_id) %></span>
       </td>
     </tr>
   <% end %>
