--- a/lib/surfline_regions_web/templates/area/show.html.eex
+++ b/lib/surfline_regions_web/templates/area/show.html.eex
@@ -5,5 +5,5 @@
   <li><span>Surfline ID:</span> <%= @area.surfline_id %></li>
 </ul>
 
-<span><%= link "Regions", to: area_region_path(@conn, :index, @area.id) %></span>
+<span><%= link "Regions", to: area_region_path(@conn, :index, @area.surfline_id) %></span>
 <span><%= link "Back", to: area_path(@conn, :index) %></span>
