--- a/lib/surfline_regions_web/templates/region/index.html.eex
+++ b/lib/surfline_regions_web/templates/region/index.html.eex
@@ -17,8 +17,21 @@
         <%= region.surfline_id %>
       </td>
       <td class="text-right">
-        <span><%= link "Show", to: area_region_path(@conn, :show, @area.id, region.id) %></span>
-        <span><%= link "Sub Regions", to: area_region_sub_region_path(@conn, :index, @area.id, region.id) %></span>
+        <span>
+          <%= link "Show", to: area_region_path(
+            @conn,
+            :show,
+            @area.surfline_id,
+            region.surfline_id
+          ) %>
+        </span>
+        <span>
+          <%= link "Sub Regions", to: area_region_sub_region_path(
+            @conn, :index,
+            @area.surfline_id,
+            region.surfline_id
+          ) %>
+        </span>
       </td>
     </tr>
   <% end %>
