--- a/lib/surfline_regions_web/templates/sub_region/show.html.eex
+++ b/lib/surfline_regions_web/templates/sub_region/show.html.eex
@@ -5,4 +5,11 @@
   <li><span>Surfline ID:</span> <%= @sub_region.surfline_id %></li>
 </ul>
 
-<span><%= link "Back", to: area_region_sub_region_path(@conn, :index, @area.id, @region.id) %></span>
+<span>
+  <%= link "Back", to: area_region_sub_region_path(
+    @conn,
+    :index,
+    @area.surfline_id,
+    @region.surfline_id
+  ) %>
+</span>
